--- a/wiki/DeveloperGuide.wiki
+++ b/wiki/DeveloperGuide.wiki
@@ -1,4 +1,5 @@
 #summary Usage examples of ros-gwt
+#sidebar TableOfContents
 
 = Introduction =
 
@@ -141,3 +142,7 @@ param.set(paramValue, new Callback<JSONObject, Void>() {
 	}
 });
 </code>
+
+= Javadoc =
+
+Here is a [http://gwt-ros.googlecode.com/svn/trunk/ros-gwt/doc/index.html link to Javadoc]
